--- a/components/Header/index.module.scss
+++ b/components/Header/index.module.scss
@@ -68,7 +68,7 @@
 
     font-family: var(--sans-serif);
     font-weight: 700;
-    letter-spacing: var(--kerning-widest);
+    letter-spacing: var(--kerning-wider);
     text-transform: uppercase;
   }
 
